# mips-on-c

./: CMakeLists.txt  LICENSE  README.md  install.sh  mips_simulator
include/: encoder.h  executors.h  instruction.h  instruction_list.h  instructions.h  label.h  label_list.h  memory.h  parser.h  register.h  validator.h
src/: encoder.c  executors.c  instruction.c  instruction_list.c  instructions.c  label.c  label_list.c  main.c  memory.c  menu.c  parser.c  register.c  validator.c
